--- a/MySQLDapperDebug/Views/App/ReadData.cshtml
+++ b/MySQLDapperDebug/Views/App/ReadData.cshtml
@@ -167,7 +167,7 @@
                             <button type="button" id="createGraph" class="btn btn-dark" onclick="createNewGraph()">
                                 Create
                             </button>
-                            <button type="submit" id="createCsv" class="btn btn-dark" onclick="getCsv()">
+                            <button type="button" id="createCsv" class="btn btn-dark" onclick="getCsv()">
                                 Download
                             </button>
                         </form>
